# teutonic

./: .cursorignore  .gitignore  DESIGN.md  README.md  SCORING_PLAN.md  __init__.py  burn_weights.py  chain.toml  chain_config.py  current_state.md  deploy_eval_server.sh  ecosystem.cleanup.config.js  ecosystem.config.js  ecosystem.eval.config.js  eval_penalized.py  eval_server.py  eval_server.supervisor.conf  eval_server_quasar_pair.py  eval_server_two_sources.py  eval_server_vllm.py  eval_torch.py  experiment_copy_resistance.py  hourly_burn_weights.py  index.html  manifest.json  miner.py  model_store.py  npy_sources.py  pyproject.toml  run_local.py  s3_transfer.py  startup_policy.py  tunnel.sh  validator.py
archs/quasar/: seed.py
archs/qwen3/: __init__.py  seed.py
archs/qwen3_moe/: seed.py
benchmarks/: ifeval-iris-999-Teutonic-VIII-5GCPdbk3-v23x_r5s150_70-01-2026-04-30.json
docs/: DESIGN.md  LXXX_GOLIVE_REPORT.md  LXXX_RUNBOOK.md  LXXX_SANDBOX_REPORT.md  LXXX_SOAK_REPORT.md  MINING.md  OPTIMAL_DESIGN.md  SCORING_PLAN.md  king-benchmark-daily.md
eval/: __init__.py  raw_dataset.py  torch_runner.py  vllm_runner.py  vllm_server.py
keys/: validator_model_encryption.pub
neurons/: miner.py  run_miner.py  trainer.py  validator.py
quasar/: __init__.py  configuration_quasar.py  modeling_quasar.py
scripts/: PLAN_TEUTONIC_III.md  PLAN_TEUTONIC_VIII.md  _probe_smoke.py  analyze_norms.py  calibrate_probe.py  cascade_dethrone_now.py  cleanup_model_cache.py  cleanup_shard_cache.py  compare_curves.py  cutover_to_teutonic_iii.py  cutover_to_teutonic_viii.py  decrypt_safetensors.py  encrypt_safetensors.py  eval_king_benchmarks.py  eval_king_benchmarks_lium.py  experiment_penalized.py  gpu_start_eval.sh  ingest_hf.py  ingest_hf_lium.py  mirror_hf_to_hippius_lium.py  norm_analysis.json  plot_comparison.py  probe_monitor.sh  rearm_failed_submissions.py  rearm_submission_by_repo.py  reeval_all.py  reeval_models.txt  reeval_sweep.py  reshard_dataset.py  run_ingest.sh  sandbox_synth_shard.py  seed.py  seed_teutonic_ii.py  seed_teutonic_iii.py  seed_teutonic_viii.py  seed_teutonic_xxiv.py  setup_gpu_creds.sh  size_quasar.py  smoke_eval_teutonic_ii.py  smoke_eval_teutonic_iii.py  (+6 more)
scripts/benchmark/: ecosystem.config.js  runner.py  start.sh
scripts/bot/: chain.py  dashboard.py  gpu.sh  status.sh
scripts/experiments/: divide_safetensors.py
src/koth/: cli.py  (+13 more)
tests/: test_commitment_decode_shapes.py  test_convergence.py  test_distributed.py  test_r2.py  test_scale.py  test_scoring.py  test_stress.py  test_stress_r2.py
website/: index.html
(+44 files in other folders)
