[project]
name = "teutonic"
version = "0.1.0"
description = "Pretraining on subnet 3."
requires-python = ">=3.11"
dependencies = [
    "bittensor",
    "boto3",
    "httpx",
    "numpy",
    "scipy",
    "huggingface-hub",
    "safetensors",
]

[project.scripts]
teutonic-validator = "validator:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["validator.py"]
